# opengl-shadow-test

./: CMakeLists.txt  main.cpp
include/: Mesh.h  Shader.h  ShaderPart.h
include/math/: matrizes.h  utils.h  vectors.h
include/math/matrizes/: mat4.h
include/math/vectors/: vec4.h
shaders/: default.fs  default.vs
src/: Mesh.cpp  Shader.cpp  ShaderPart.cpp
src/math/matrizes/: mat4.cpp
src/math/vectors/: vec4.cpp
